Partners section, visual updates

--- a/skrynai.html
+++ b/skrynai.html
@@ -196,6 +196,9 @@
     <section class="program">
       <div class="container">
         <h2>Programa</h2>
+        <div class="program-subheading">
+          <p>Rugpjūčio 13-15 d. Klaipėdoje</p>
+        </div>
         <div class="program-contents">
           <p>Trys skirtingi vakarai įvairiems skoniams</p>
           <p>1 DIENA - Trumpametražiai filmai</p>
@@ -211,9 +214,66 @@
       </div>
     </section>
 
+    <section class="partners">
+      <div class="partners-content">
+        <h2>Organizatoriai / draugai:</h2>
+        <div class="partners-logos">
+          <img
+            src="./images/dar-marketingo-logo.png"
+            alt="DarMarketingo logo"
+          />
+          <img src="./images/Ateik-logo.png" alt="AteikAteik logo" />
+        </div>
+      </div>
+    </section>
+
     <section class="join">
       <div class="container">
         <h2>Kaip prisidėti?</h2>
+        <div class="join-contents">
+          <div class="join-left">
+            <h3>Savanoriauk!</h3>
+            <p>
+              Ieškome savanorių - tų, kurie myli turinį, nebijo veiksmo ir nori,
+              kad Skrynai šiemet būtų dar šviesesni, garsesni ir jaukesni.
+            </p>
+            <p>
+              Jeigu nori kurti kartu, o veiksmas šiapus anapus ekranų nebaisu -
+              prisijunk! 🎥
+            </p>
+      
+          </div>
+          <div class="join-right">
+            <h3>Tapk remėju!</h3>
+
+            <ul>
+              <li>
+                Didesnis matomumas ir teigiamas įvaizdis: atskleiskime Jūsų
+                įmonės vertybes, parama vietinei meninei veiklai - puiki įmonės
+                socialinės atsakomybės ir indėlio į bendruomenę išraiška.
+              </li>
+              <li>
+                Prieiga prie tikslinės auditorijos: festivalis suburia
+                industrijos mėgėjus. Čia susirenka kino, muzikos, medijų
+                entuziastai ir specialistai. Populiarusis turinys pritraukia ir
+                industrijos mėgėjus.
+              </li>
+
+              <li>
+                Ekonominis poveikis: Festivalis traukia lankytojus į vietinį
+                verslą (restoranus, parduotuves), prisidėdamas prie vietos
+                ekonomikos gyvybingumo.
+              </li>
+              <li>
+                Kultūrinis praturtinimas: festivalio rėmėjai prisideda prie
+                vietos meno ir kultūros renginių populiarinimo, bendruomenės
+                edukavimo ir suteikia prieigą prie nemokamo, kokybiško turinio
+                prieinamumo visiems norintiems.
+              </li>
+            </ul>
+          </div>
+        </div>
+        <p>Susisiek su mumis el. paštu: sergej@subkinas.com</p>
       </div>
     </section>
   </body>
