Adapted for mobile

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Skrynai</title>
   </head>
   <body>
-    <section class="Hero">
+    <section class="hero">
       <div class="hero-container">
         <img
           class="hero-seagull-img"
@@ -121,8 +121,8 @@
             Klaipėdos širdyje.
           </p>
           <div class="hero-btns">
-            <button class="btn">Programa</button>
-            <button class="btn2">Prisidėk!</button>
+            <a href="#program"><button class="btn">Programa</button></a>
+            <a href="#join"><button class="btn2">Prisidėk!</button></a>
           </div>
         </div>
       </div>
@@ -151,6 +151,7 @@
         </div>
       </div>
     </section>
+          <div class="seperator"></div>
 
     <section class="history">
       <div class="history-container">
@@ -193,7 +194,7 @@
       </div>
     </section>
 
-    <section class="program">
+    <section class="program" id="program">
       <div class="container">
         <h2>Programa</h2>
         <div class="program-subheading">
@@ -213,8 +214,9 @@
         </div>
       </div>
     </section>
-
+      <div class="seperator"></div>
     <section class="partners">
+
       <div class="partners-content">
         <h2>Organizatoriai / draugai:</h2>
         <div class="partners-logos">
@@ -227,7 +229,7 @@
       </div>
     </section>
 
-    <section class="join">
+    <section class="join" id="join">
       <div class="container">
         <h2>Kaip prisidėti?</h2>
         <div class="join-contents">
@@ -239,42 +241,22 @@
             </p>
             <p>
               Jeigu nori kurti kartu, o veiksmas šiapus anapus ekranų nebaisu -
-              prisijunk! 🎥
+              prisijunk!
             </p>
       
           </div>
           <div class="join-right">
             <h3>Tapk remėju!</h3>
-
-            <ul>
-              <li>
-                Didesnis matomumas ir teigiamas įvaizdis: atskleiskime Jūsų
-                įmonės vertybes, parama vietinei meninei veiklai - puiki įmonės
-                socialinės atsakomybės ir indėlio į bendruomenę išraiška.
-              </li>
-              <li>
-                Prieiga prie tikslinės auditorijos: festivalis suburia
-                industrijos mėgėjus. Čia susirenka kino, muzikos, medijų
-                entuziastai ir specialistai. Populiarusis turinys pritraukia ir
-                industrijos mėgėjus.
-              </li>
-
-              <li>
-                Ekonominis poveikis: Festivalis traukia lankytojus į vietinį
-                verslą (restoranus, parduotuves), prisidėdamas prie vietos
-                ekonomikos gyvybingumo.
-              </li>
-              <li>
-                Kultūrinis praturtinimas: festivalio rėmėjai prisideda prie
-                vietos meno ir kultūros renginių populiarinimo, bendruomenės
-                edukavimo ir suteikia prieigą prie nemokamo, kokybiško turinio
-                prieinamumo visiems norintiems.
-              </li>
-            </ul>
+            <p>Remėjai tampa festivalio draugais ir bendrakurėjais.</p>
+             <p>Prisidėdami prie festivalio sekmės, būna matomi kino kūrėjų ir megėjų</p>
           </div>
         </div>
-        <p>Susisiek su mumis el. paštu: sergej@subkinas.com</p>
       </div>
+      <div class="join-contact">
+              <p>Nori prisidėt? Susisiek el. paštu: <a href="mailto:sergej@subkinas.com">sergej@subkinas.com</a></p>
+              <p> </p>
+      </div>
+
     </section>
   </body>
 </html>
