--- a/index.html
+++ b/index.html
@@ -109,15 +109,14 @@
             ></rect>
           </svg>
         </div>
-        <!-- <img class="hero-decor" src="./images/wave.svg" /> -->
         <div class="hero-content">
           <h1>Klaipėdos Skrynai!</h1>
 
           <div class="hero-text">08.13 - 08.15 D.</div>
           <p>
-            Geriausi filmų, reklamų ir muzikos klipų <br />
-            pavyzdžiai ir pokalbiai su jų kūrėjais nemokamame 3 vakarų
-            festivalyje <br />
+            Geriausi trumpo metro filmai, reklamų ir muzikos klipai 
+            bei pokalbiai su jų kūrėjais nemokamame 3 vakarų
+            festivalyje 
             Klaipėdos širdyje.
           </p>
           <div class="hero-btns">
@@ -151,7 +150,7 @@
         </div>
       </div>
     </section>
-          <div class="seperator"></div>
+    <div class="seperator"></div>
 
     <section class="history">
       <div class="history-container">
@@ -214,16 +213,19 @@
         </div>
       </div>
     </section>
-      <div class="seperator"></div>
+    <div class="seperator"></div>
     <section class="partners">
-
       <div class="partners-content">
         <h2>Organizatoriai / draugai:</h2>
         <div class="partners-logos">
-          <img
-            src="./images/dar-marketingo-logo.png"
-            alt="DarMarketingo logo"
-          />
+          <div class="organizers">
+            <img src="./images/SK_logo_bk_1.png" alt="Subkinas logo" />
+            <img
+              src="./images/dar-marketingo-logo.png"
+              alt="DarMarketingo logo"
+            />
+          </div>
+
           <img src="./images/Ateik-logo.png" alt="AteikAteik logo" />
         </div>
       </div>
@@ -243,20 +245,24 @@
               Jeigu nori kurti kartu, o veiksmas šiapus anapus ekranų nebaisu -
               prisijunk!
             </p>
-      
           </div>
           <div class="join-right">
             <h3>Tapk remėju!</h3>
-            <p>Remėjai tampa festivalio draugais ir bendrakurėjais.</p>
-             <p>Prisidėdami prie festivalio sekmės, būna matomi kino kūrėjų ir megėjų</p>
+            <p>Remėjai tampa festivalio draugais ir bendrakūrėjais.</p>
+            <p>
+              Prisidėdami prie festivalio sekmės, būna matomi kino kūrėjų ir
+              megėjų
+            </p>
           </div>
         </div>
       </div>
       <div class="join-contact">
-              <p>Nori prisidėt? Susisiek el. paštu: <a href="mailto:sergej@subkinas.com">sergej@subkinas.com</a></p>
-              <p> </p>
+        <p>
+          Nori prisidėt? Susisiek el. paštu:
+          <a href="mailto:sergej@subkinas.com">sergej@subkinas.com</a>
+        </p>
+        <p></p>
       </div>
-
     </section>
   </body>
 </html>
