ux update: history, values, program sections

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
           tapo trijų dienų festivaliu. Dalyvių skaičius taip pat išaugo daugiau
           nei 3 kartus. Svečių sulaukta iš visos Lietuvos.
         </p>
-        <div class="history-images">
+        <div class="history-images container">
           <img
             src="./images/seima.jpg"
             alt="Šeima festivalyje Klaipėdos Skrynai"
@@ -196,14 +196,12 @@
     <section class="program" id="program">
       <div class="container">
         <h2>Programa</h2>
-        <div class="program-subheading">
-          <p>Rugpjūčio 13-15 d. Klaipėdoje</p>
-        </div>
         <div class="program-contents">
           <p>Trys skirtingi vakarai įvairiems skoniams</p>
           <p>1 DIENA - Trumpametražiai filmai</p>
           <p>2 DIENA - Video reklamos</p>
           <p>3 DIENA - Muzikiniai klipai</p>
+          <p class="program-date">Rugpjūčio 13-15 d. Klaipėdoje</p>
           <div class="discussion-image">
             <img
               src="./images/diskusija.png"
@@ -219,14 +217,13 @@
         <h2>Organizatoriai / draugai:</h2>
         <div class="partners-logos">
           <div class="organizers">
-            <img src="./images/SK_logo_bk_1.png" alt="Subkinas logo" />
-            <img
+            <a href="https://subkinas.com/"><img src="./images/SK_logo_bk_1.png" alt="Subkinas logo" /></a>
+            <a href="https://www.darmarketingo.lt/"><img
               src="./images/dar-marketingo-logo.png"
-              alt="DarMarketingo logo"
-            />
+              alt="DarMarketingo logo"/></a>
           </div>
 
-          <img src="./images/Ateik-logo.png" alt="AteikAteik logo" />
+          <a href="https://belaiko.lt/kavines/"><img src="./images/Ateik-logo.png" alt="AteikAteik logo" /></a>
         </div>
       </div>
     </section>
