--- a/index.html
+++ b/index.html
@@ -197,19 +197,23 @@
       <div class="container">
         <h2>Programa</h2>
         <div class="program-contents">
+          <div class="program-content-left">
+            
+          </div>
           <p>Trys skirtingi vakarai įvairiems skoniams</p>
           <p>1 DIENA - Trumpametražiai filmai</p>
           <p>2 DIENA - Video reklamos</p>
           <p>3 DIENA - Muzikiniai klipai</p>
           <p class="program-date">Rugpjūčio 13-15 d. Klaipėdoje</p>
-          <div class="discussion-image">
+          
+        </div>
+      </div>
+      <div class="discussion-image">
             <img
               src="./images/diskusija.png"
               alt="diskusija festivalyje Klaipėdos Skrynai"
             />
           </div>
-        </div>
-      </div>
     </section>
     <div class="seperator"></div>
     <section class="partners">
