--- a/index.html
+++ b/index.html
@@ -1,7 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Primary Meta Tags -->
+    <title>Klaipėdos Skrynai – Nemokamas Trumpo Metro Filmų Festivalis</title>
+    <meta
+      name="description"
+      content="Klaipėdos Skrynai – nemokamas 3 vakarų festivalis Klaipėdoje! Geriausi trumpo metro filmai, reklamos, muzikos klipai ir pokalbiai su kūrėjais – rugpjūčio 13–15 dienomis."
+    />
+    <meta
+      name="keywords"
+      content="Klaipėda festivalis, trumpo metro filmai, muzikos klipai, reklamos, renginiai Klaipėdoje, Skrynai festivalis"
+    />
+    <meta name="author" content="Skrynai Festival Team" />
     <meta charset="UTF-8" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://skrynai.subkinas.com/" />
+    <meta
+      property="og:title"
+      content="Klaipėdos Skrynai – Nemokamas Trumpo Metro Filmų Festivalis"
+    />
+    <meta
+      property="og:description"
+      content="3 dienos filmų, muzikos klipų, reklamų ir pokalbių su kūrėjais – rugpjūčio 13–15 Klaipėdos centre. Įėjimas nemokamas!"
+    />
+    <meta
+      property="og:image"
+      content="https://skrynai.subkinas.com/images/vedejai.jpg"
+    />
+    <!-- Replace with actual image URL -->
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://skrynai.subkinas.com/" />
+    <meta
+      name="twitter:title"
+      content="Klaipėdos Skrynai – Nemokamas Trumpo Metro Filmų Festivalis"
+    />
+    <meta
+      name="twitter:description"
+      content="Trumpo metro filmai, klipai, reklamos ir kūrėjų pokalbiai rugpjūčio 13–15 dienomis. Festivalis nemokamas!"
+    />
+    <meta
+      name="twitter:image"
+      content="https://skrynai.subkinas.com/images/vedejai.jpg"
+    />
+    <!-- Replace with actual image URL -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="skrynai.css" />
     <title>Skrynai</title>
@@ -114,10 +159,9 @@
 
           <div class="hero-text">08.13 - 08.15 D.</div>
           <p>
-            Geriausi trumpo metro filmai, reklamų ir muzikos klipai 
-            bei pokalbiai su jų kūrėjais nemokamame 3 vakarų
-            festivalyje 
-            Klaipėdos širdyje.
+            Geriausi trumpo metro filmai, reklamų ir muzikos klipai bei
+            pokalbiai su jų kūrėjais nemokamame 3 vakarų festivalyje Klaipėdos
+            širdyje.
           </p>
           <div class="hero-btns">
             <a href="#program"><button class="btn">Programa</button></a>
@@ -197,23 +241,20 @@
       <div class="container">
         <h2>Programa</h2>
         <div class="program-contents">
-          <div class="program-content-left">
-            
-          </div>
+          <div class="program-content-left"></div>
           <p>Trys skirtingi vakarai įvairiems skoniams</p>
           <p>1 DIENA - Trumpametražiai filmai</p>
           <p>2 DIENA - Video reklamos</p>
           <p>3 DIENA - Muzikiniai klipai</p>
           <p class="program-date">Rugpjūčio 13-15 d. Klaipėdoje</p>
-          
         </div>
       </div>
       <div class="discussion-image">
-            <img
-              src="./images/diskusija.png"
-              alt="diskusija festivalyje Klaipėdos Skrynai"
-            />
-          </div>
+        <img
+          src="./images/diskusija.png"
+          alt="diskusija festivalyje Klaipėdos Skrynai"
+        />
+      </div>
     </section>
     <div class="seperator"></div>
     <section class="partners">
@@ -221,13 +262,19 @@
         <h2>Organizatoriai / draugai:</h2>
         <div class="partners-logos">
           <div class="organizers">
-            <a href="https://subkinas.com/"><img src="./images/SK_logo_bk_1.png" alt="Subkinas logo" /></a>
-            <a href="https://www.darmarketingo.lt/"><img
-              src="./images/dar-marketingo-logo.png"
-              alt="DarMarketingo logo"/></a>
+            <a href="https://subkinas.com/"
+              ><img src="./images/SK_logo_bk_1.png" alt="Subkinas logo"
+            /></a>
+            <a href="https://www.darmarketingo.lt/"
+              ><img
+                src="./images/dar-marketingo-logo.png"
+                alt="DarMarketingo logo"
+            /></a>
           </div>
 
-          <a href="https://belaiko.lt/kavines/"><img src="./images/Ateik-logo.png" alt="AteikAteik logo" /></a>
+          <a href="https://belaiko.lt/kavines/"
+            ><img src="./images/Ateik-logo.png" alt="AteikAteik logo"
+          /></a>
         </div>
       </div>
     </section>
