--- a/index.html
+++ b/index.html
@@ -197,18 +197,18 @@
     <div class="seperator"></div>
 
     <section class="history">
-      <div class="history-container">
-        <h2>Festivalis 2025-aisiais:</h2>
+      <div class="history-container container">
+        <h2>Festivalis 2024-aisiais:</h2>
         <p>
           Festivalis šiemet vyks jau penktą kartą, o praėjusiais metais įvyko
-          didžiausias augimas. Klaipėdos skrynai 2025-ais metais iš vieno vakaro
+          didžiausias augimas. Klaipėdos skrynai 2024-ais metais iš vieno vakaro
           renginio,
         </p>
         <p>
           tapo trijų dienų festivaliu. Dalyvių skaičius taip pat išaugo daugiau
           nei 3 kartus. Svečių sulaukta iš visos Lietuvos.
         </p>
-        <div class="history-images container">
+        <div class="history-images">
           <img
             src="./images/seima.jpg"
             alt="Šeima festivalyje Klaipėdos Skrynai"
