--- a/index.html
+++ b/index.html
@@ -50,6 +50,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="skrynai.css" />
     <title>Skrynai</title>
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-JJJP70L1E2"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+      gtag("config", "G-JJJP70L1E2");
+    </script>
   </head>
   <body>
     <section class="hero">
