--- a/index.html
+++ b/index.html
@@ -1,236 +1,190 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <!-- Primary Meta Tags -->
-    <title>Klaipėdos Skrynai – Nemokamas Trumpo Metro Filmų Festivalis</title>
-    <meta
-      name="description"
-      content="Klaipėdos Skrynai – nemokamas 3 vakarų festivalis Klaipėdoje! Geriausi trumpo metro filmai, reklamos, muzikos klipai ir pokalbiai su kūrėjais – rugpjūčio 13–15 dienomis."
-    />
-    <meta
-      name="keywords"
-      content="Klaipėda festivalis, trumpo metro filmai, muzikos klipai, reklamos, renginiai Klaipėdoje, Skrynai festivalis"
-    />
-    <meta name="author" content="Skrynai Festival Team" />
-    <meta charset="UTF-8" />
 
-    <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://skrynai.subkinas.com/" />
-    <meta
-      property="og:title"
-      content="Klaipėdos Skrynai – Nemokamas Trumpo Metro Filmų Festivalis"
-    />
-    <meta
-      property="og:description"
-      content="3 dienos filmų, muzikos klipų, reklamų ir pokalbių su kūrėjais – rugpjūčio 13–15 Klaipėdos centre. Įėjimas nemokamas!"
-    />
-    <meta
-      property="og:image"
-      content="https://skrynai.subkinas.com/images/vedejai.jpg"
-    />
-    <!-- Replace with actual image URL -->
+<head>
+  <!-- Primary Meta Tags -->
+  <title>Klaipėdos Skrynai – Nemokamas Trumpo Metro Filmų Festivalis</title>
+  <meta name="description"
+    content="Klaipėdos Skrynai – nemokamas 3 vakarų festivalis Klaipėdoje! Geriausi trumpo metro filmai, reklamos, muzikos klipai ir pokalbiai su kūrėjais – rugpjūčio 13–15 dienomis." />
+  <meta name="keywords"
+    content="Klaipėda festivalis, trumpo metro filmai, muzikos klipai, reklamos, renginiai Klaipėdoje, Skrynai festivalis" />
+  <meta name="author" content="Skrynai Festival Team" />
+  <meta charset="UTF-8" />
 
-    <!-- Twitter -->
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:url" content="https://skrynai.subkinas.com/" />
-    <meta
-      name="twitter:title"
-      content="Klaipėdos Skrynai – Nemokamas Trumpo Metro Filmų Festivalis"
-    />
-    <meta
-      name="twitter:description"
-      content="Trumpo metro filmai, klipai, reklamos ir kūrėjų pokalbiai rugpjūčio 13–15 dienomis. Festivalis nemokamas!"
-    />
-    <meta
-      name="twitter:image"
-      content="https://skrynai.subkinas.com/images/vedejai.jpg"
-    />
-    <!-- Replace with actual image URL -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="skrynai.css" />
-    <title>Skrynai</title>
-    <script
-      async
-      src="https://www.googletagmanager.com/gtag/js?id=G-JJJP70L1E2"
-    ></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag("js", new Date());
-      gtag("config", "G-JJJP70L1E2");
-    </script>
-  </head>
-  <body>
-    <section class="hero">
-      <div class="hero-container">
-        <img
-          class="hero-seagull-img"
-          src="./images/seagull.webp"
-          alt="seagull of Klaipedos skrynai"
-        />
-        <div class="horizontal-wave">
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://skrynai.subkinas.com/" />
+  <meta property="og:title" content="Klaipėdos Skrynai – Nemokamas Trumpo Metro Filmų Festivalis" />
+  <meta property="og:description"
+    content="3 dienos filmų, muzikos klipų, reklamų ir pokalbių su kūrėjais – rugpjūčio 13–15 Klaipėdos centre. Įėjimas nemokamas!" />
+  <meta property="og:image" content="https://skrynai.subkinas.com/images/vedejai.jpg" />
+  <!-- Replace with actual image URL -->
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:url" content="https://skrynai.subkinas.com/" />
+  <meta name="twitter:title" content="Klaipėdos Skrynai – Nemokamas Trumpo Metro Filmų Festivalis" />
+  <meta name="twitter:description"
+    content="Trumpo metro filmai, klipai, reklamos ir kūrėjų pokalbiai rugpjūčio 13–15 dienomis. Festivalis nemokamas!" />
+  <meta name="twitter:image" content="https://skrynai.subkinas.com/images/vedejai.jpg" />
+  <!-- Replace with actual image URL -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="skrynai.css" />
+  <title>Skrynai</title>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-JJJP70L1E2"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag("js", new Date());
+    gtag("config", "G-JJJP70L1E2");
+  </script>
+</head>
+
+<body>
+  <section class="hero">
+    <div class="hero-container">
+      <img class="hero-seagull-img" src="./images/seagull.webp" alt="seagull of Klaipedos skrynai" />
+      <div class="horizontal-wave">
         <img src="./images/hero-seperator.svg" alt="">
-        </div>
-        <div class="hero-content">
-          <h1>Klaipėdos Skrynai!</h1>
+      </div>
+      <div class="hero-content">
+        <h1>Klaipėdos Skrynai!</h1>
 
-          <div class="hero-text">08.13 - 08.15 D.</div>
+        <div class="hero-text">08.13 - 08.15 D.</div>
+        <p>
+          Geriausi trumpo metro filmai, reklamų ir muzikos klipai bei
+          pokalbiai su jų kūrėjais nemokamame 3 vakarų festivalyje Klaipėdos
+          širdyje.
+        </p>
+        <div class="hero-btns">
+          <a href="#program"><button class="btn">Programa</button></a>
+          <a href="#join"><button class="btn2">Prisidėk!</button></a>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="values">
+    <div class="container">
+      <div class="values-content">
+        <div class="values-content-left">
+          <h2>Festivalis visiems!</h2>
           <p>
-            Geriausi trumpo metro filmai, reklamų ir muzikos klipai bei
-            pokalbiai su jų kūrėjais nemokamame 3 vakarų festivalyje Klaipėdos
-            širdyje.
+            Čia kiekvienas žiūrovas atras sau artimą turinį, o vietos filmų
+            kūrėjai, reklamos specialistai ir videografai susiburs į
+            bendruomenę, turinčią erdvę dalintis savo darbais su visuomene
           </p>
-          <div class="hero-btns">
-            <a href="#program"><button class="btn">Programa</button></a>
-            <a href="#join"><button class="btn2">Prisidėk!</button></a>
-          </div>
+          <p>
+            Renginyje kasdien pateikiamas vis kitokio tipo turinys - kiekviena
+            diena dedikuota skirtingai meno išraiškai.
+          </p>
+        </div>
+        <div class="values-content-right">
+          <img src="./images/savanores.png" alt="Klaipėdos skrynų savanoriai" />
         </div>
       </div>
-    </section>
-    <section class="values">
-      <div class="container">
-        <div class="values-content">
-          <div class="values-content-left">
-            <h2>Festivalis visiems!</h2>
-            <p>
-              Čia kiekvienas žiūrovas atras sau artimą turinį, o vietos filmų
-              kūrėjai, reklamos specialistai ir videografai susiburs į
-              bendruomenę, turinčią erdvę dalintis savo darbais su visuomene
-            </p>
-            <p>
-              Renginyje kasdien pateikiamas vis kitokio tipo turinys - kiekviena
-              diena dedikuota skirtingai meno išraiškai.
-            </p>
-          </div>
-          <div class="values-content-right">
-            <img
-              src="./images/savanores.png"
-              alt="Klaipėdos skrynų savanoriai"
-            />
-          </div>
-        </div>
-      </div>
-    </section>
-    <div class="seperator"></div>
+    </div>
+  </section>
+  <div class="seperator"></div>
 
-    <section class="history">
-      <div class="history-container container">
-        <h2>Festivalis 2024-aisiais:</h2>
-        <p>
-          Festivalis šiemet vyks jau penktą kartą, o praėjusiais metais įvyko
-          didžiausias augimas. Klaipėdos skrynai 2024-ais metais iš vieno vakaro
-          renginio,
-        </p>
-        <p>
-          tapo trijų dienų festivaliu. Dalyvių skaičius taip pat išaugo daugiau
-          nei 3 kartus. Svečių sulaukta iš visos Lietuvos.
-        </p>
-        <div class="history-images">
-          <img
-            src="./images/seima.jpg"
-            alt="Šeima festivalyje Klaipėdos Skrynai"
-          />
-          <img
-            src="./images/vedejai.jpg"
-            alt="Vedėjai festivalyje Klaipėdos Skrynai"
-          />
-          <img
-            src="./images/sveciai.jpg"
-            alt="Sveičiai festivalyje Klaipėdos Skrynai"
-          />
-          <img
-            src="./images/Slido.jpg"
-            alt="Interaktyvios veiklos festivalyje Klaipėdos Skrynai"
-          />
-          <img
-            src="./images/mokymai.jpg"
-            alt="workshop festivalyje Klaipėdos Skrynai"
-          />
-          <img
-            src="./images/organizatoriai.jpg"
-            alt="organizatoriai festivalyje Klaipėdos Skrynai"
-          />
-        </div>
+  <section class="history">
+    <div class="history-container container">
+      <h2>Festivalis 2024-aisiais:</h2>
+      <p>
+        Festivalis šiemet vyks jau penktą kartą, o praėjusiais metais įvyko
+        didžiausias augimas. Klaipėdos skrynai 2024-ais metais iš vieno vakaro
+        renginio,
+      </p>
+      <p>
+        tapo trijų dienų festivaliu. Dalyvių skaičius taip pat išaugo daugiau
+        nei 3 kartus. Svečių sulaukta iš visos Lietuvos.
+      </p>
+      <div class="history-images">
+        <img src="./images/seima.jpg" alt="Šeima festivalyje Klaipėdos Skrynai" />
+        <img src="./images/vedejai.jpg" alt="Vedėjai festivalyje Klaipėdos Skrynai" />
+        <img src="./images/sveciai.jpg" alt="Sveičiai festivalyje Klaipėdos Skrynai" />
+        <img src="./images/Slido.jpg" alt="Interaktyvios veiklos festivalyje Klaipėdos Skrynai" />
+        <img src="./images/mokymai.jpg" alt="workshop festivalyje Klaipėdos Skrynai" />
+        <img src="./images/organizatoriai.jpg" alt="organizatoriai festivalyje Klaipėdos Skrynai" />
       </div>
-    </section>
+    </div>
+  </section>
 
-    <section class="program" id="program">
-      <div class="container">
-        <h2>Programa</h2>
-        <div class="program-contents">
-          <div class="program-content-left"></div>
-          <p>Trys skirtingi vakarai įvairiems skoniams</p>
-          <p>1 DIENA - Trumpametražiai filmai</p>
-          <p>2 DIENA - Video reklamos</p>
-          <p>3 DIENA - Muzikiniai klipai</p>
-          <p class="program-date">Rugpjūčio 13-15 d. Klaipėdoje</p>
-        </div>
+  <section class="program" id="program">
+    <div class="container">
+      <h2>Programa</h2>
+      <div class="program-contents">
+        <div class="program-content-left"></div>
+        <p>Trys skirtingi vakarai įvairiems skoniams</p>
+        <p>1 DIENA - Trumpametražiai filmai</p>
+        <p>2 DIENA - Video reklamos</p>
+        <p>3 DIENA - Muzikiniai klipai</p>
+        <p class="program-date">Rugpjūčio 13-15 d. Klaipėdoje</p>
       </div>
-      <div class="discussion-image">
-        <img
-          src="./images/diskusija.png"
-          alt="diskusija festivalyje Klaipėdos Skrynai"
-        />
-      </div>
-    </section>
-    <div class="seperator"></div>
-    <section class="partners">
-      <div class="partners-content">
-        <h2>Organizatoriai / draugai:</h2>
-        <div class="partners-logos">
-          <div class="organizers">
-            <a href="https://subkinas.com/"
-              ><img src="./images/SUBKINAS_LOGO.png" alt="Subkinas logo"
-            /></a>
-            <a href="https://www.darmarketingo.lt/"
-              ><img
-                src="./images/dar-marketingo-logo.png"
-                alt="DarMarketingo logo"
-            /></a>
-          </div>
+    </div>
+    <div class="discussion-image">
+      <img src="./images/diskusija.png" alt="diskusija festivalyje Klaipėdos Skrynai" />
+    </div>
+  </section>
+  <div class="seperator"></div>
+  <section class="partners">
+    <div class="partners-content">
 
-          <a href="https://belaiko.lt/kavines/"
-            ><img src="./images/Ateik-logo.png" alt="AteikAteik logo"
-          /></a>
+      <div class="partners-logos">
+        <h2>Organizatoriai</h2>
+        <div class="logos">
+          <a href="https://subkinas.com/"><img src="./images/SUBKINAS_LOGO.png" alt="Subkinas logo" /></a>
+          <a href="https://www.darmarketingo.lt/"><img src="./images/dar-marketingo-logo.png"
+              alt="DarMarketingo logo" /></a>
+          <a href="https://jonaspetrikas.com/"><img src="./images/JP-logo-square-full-black.webp"
+              alt="Jonas Petrikas logo" /></a>
+        </div>
+        <h2>Pagrindiniai remėjai:</h2>
+        <div class="logos sponsors">
+          <a href="https://belaiko.lt/kavines/"><img src="./images/Ateik-logo.png" alt="AteikAteik logo" /></a>
+          <a href="https://slideshow.lt/"><img src="./images/slideShow-logo.svg" alt="SlideShow logo" /></a>
+          <a href="https://www.facebook.com/event.techLT/"><img src="./images/eventtech-logo-black.webp"
+              alt="EventTech logo" /></a>
+          <a href="https://www.facebook.com/printolt"><img src="./images/printo-logo.webp" alt="Printo logo" /></a>
         </div>
       </div>
-    </section>
+    </div>
+  </section>
 
-    <section class="join" id="join">
-      <div class="container">
-        <h2>Kaip prisidėti?</h2>
-        <div class="join-contents">
-          <div class="join-left">
-            <h3>Savanoriauk!</h3>
-            <p>
-              Ieškome savanorių - tų, kurie myli turinį, nebijo veiksmo ir nori,
-              kad Skrynai šiemet būtų dar šviesesni, garsesni ir jaukesni.
-            </p>
-            <p>
-              Jeigu nori kurti kartu, o veiksmas šiapus anapus ekranų nebaisu -
-              prisijunk!
-            </p>
-          </div>
-          <div class="join-right">
-            <h3>Tapk remėju!</h3>
-            <p>Remėjai tampa festivalio draugais ir bendrakūrėjais.</p>
-            <p>
-              Prisidėdami prie festivalio sekmės, būna matomi kino kūrėjų ir
-              megėjų
-            </p>
-          </div>
+  <section class="join" id="join">
+    <div class="container">
+      <h2>Kaip prisidėti?</h2>
+      <div class="join-contents">
+        <div class="join-left">
+          <h3>Savanoriauk!</h3>
+          <p>
+            Ieškome savanorių - tų, kurie myli turinį, nebijo veiksmo ir nori,
+            kad Skrynai šiemet būtų dar šviesesni, garsesni ir jaukesni.
+          </p>
+          <p>
+            Jeigu nori kurti kartu, o veiksmas šiapus anapus ekranų nebaisu -
+            prisijunk!
+          </p>
+        </div>
+        <div class="join-right">
+          <h3>Tapk remėju!</h3>
+          <p>Remėjai tampa festivalio draugais ir bendrakūrėjais.</p>
+          <p>
+            Prisidėdami prie festivalio sekmės, būna matomi kino kūrėjų ir
+            megėjų
+          </p>
         </div>
       </div>
-      <div class="join-contact">
-        <p>
-          Nori prisidėt? Susisiek el. paštu:
-          <a href="mailto:sergej@subkinas.com">sergej@subkinas.com</a>
-        </p>
-        <p></p>
-      </div>
-    </section>
-  </body>
+    </div>
+    <div class="join-contact">
+      <p>
+        Nori prisidėt? Susisiek el. paštu:
+        <a href="mailto:sergej@subkinas.com">sergej@subkinas.com</a>
+      </p>
+      <p></p>
+    </div>
+  </section>
+</body>
+
 </html>
