--- a/index.html
+++ b/index.html
@@ -140,18 +140,22 @@
           <a href="https://jonaspetrikas.com/"><img src="./images/JP-logo-square-full-black.webp"
               alt="Jonas Petrikas logo" style="scale: 0.7"/></a>
         </div>
+                <h2>Partneris:</h2>
+                   <div class="logos">
+      <a href="https://artynteatras.lt/"><img src="./images/Artyn-logo.png"
+              alt="Artyn teatras logo"  style="scale: 0.8"/></a>
+        </div>
         <h2>Pagrindiniai remėjai:</h2>
         <div class="logos sponsors">
           <a href="https://belaiko.lt/kavines/"><img src="./images/Ateik-logo.png" alt="AteikAteik logo" style="scale: 0.6"/></a>
-          <a href="https://artynteatras.lt/"><img src="./images/Artyn-logo.png"
-              alt="Artyn teatras logo"  style="scale: 1.2"/></a>
-                        <a href="https://www.klenergija.lt/"><img src="./images/Klaipedos-energija-logo.png"
-              alt="Klaipedos energija logo" style="scale: 0.8"/></a>
+     
               
           <a href="https://slideshow.lt/"><img src="./images/slideShow-logo.svg" alt="SlideShow logo" /></a>
           <a href="https://www.facebook.com/event.techLT/"><img src="./images/eventtech-logo-black.webp"
               alt="EventTech logo" /></a>
           <a href="https://www.facebook.com/printolt"><img src="./images/printo-logo.webp" alt="Printo logo" style="scale: 0.8" /></a>
+                           <a href="https://www.klenergija.lt/"><img src="./images/Klaipedos-energija-logo.png"
+              alt="Klaipedos energija logo" style="scale: 0.8"/></a>
         </div>
       </div>
     </div>
