join section update: added icons, social media and Ko-FI

--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
 </head>
 
 <body>
+  <div class="scroll-soc-icons">
+    <a href="https://www.facebook.com/klaipedafilmfestival"><img src="./images/FB.svg" alt="Facebook icon"></a>
+    <a href="https://www.instagram.com/klaipedos_skrynai/"><img src="./images/IG.svg" alt="Instagram icon"></a>
+  </div>
   <section class="hero">
     <div class="hero-container">
       <img class="hero-seagull-img" src="./images/seagull.webp" alt="seagull of Klaipedos skrynai" />
@@ -52,7 +56,10 @@
       <div class="hero-content">
         <h1>Klaipėdos Skrynai!</h1>
 
+
         <div class="hero-text">08.13 - 08.15 D.</div>
+
+
         <p>
           Geriausi trumpo metro filmai, reklamų ir muzikos klipai bei
           pokalbiai su jų kūrėjais nemokamame 3 vakarų festivalyje Klaipėdos
@@ -62,6 +69,7 @@
           <a href="#program"><button class="btn">Programa</button></a>
           <a href="#join"><button class="btn2">Prisidėk!</button></a>
         </div>
+
       </div>
     </div>
   </section>
@@ -158,12 +166,11 @@
           <a href="https://www.klenergija.lt/"><img src="./images/Klaipedos-energija-logo.png"
               alt="Klaipedos energija logo" style="scale: 0.8" /></a>
         </div>
-                <h2>Informaciniai rėmėjai</h2>
+        <h2>Informaciniai rėmėjai</h2>
         <div class="logos info-partners">
           <a href="https://klaipeda.diena.lt/"><img src="./images/klaipeda-logo.svg"
               alt="Klaipeda dienraštis logo" /></a>
-          <a href="https://www.balticum.lt/"><img src="./images/balticum-logo.svg"
-              alt="balticum logo" /></a>
+          <a href="https://www.balticum.lt/"><img src="./images/balticum-logo.svg" alt="balticum logo" /></a>
         </div>
       </div>
     </div>
@@ -173,7 +180,40 @@
     <div class="container">
       <h2>Kaip prisidėti?</h2>
       <div class="join-contents">
-        <div class="join-left">
+        <div class="join-card">
+          <img class="join-card-icon" src="./images/share.svg" alt="share icon" />
+          <h3>Skleisk žinią!</h3>
+          <p>Pasakok apie skrynus, kviesk draugus</p>
+          <div class="join-soc-icons">
+            <a href="https://www.facebook.com/klaipedafilmfestival"><img src="./images/FB.svg" alt="Facebook icon"></a>
+            <a href="https://www.instagram.com/klaipedos_skrynai/"><img src="./images/IG.svg" alt="Instagram icon"></a>
+          </div>
+          <p>Bei dalinkis soc tinklų įrašais!</p>
+
+        </div>
+
+
+        <div class="join-card">
+          <img class="join-card-icon" src="./images/coffee.svg" alt="coffee icon" />
+          <h3>Remk finansiškai</h3>
+          <p>Skrynų festivalis dalyviams NEMOKAMAS dalyviams, tačiau organizavimas vistiek nemažai kainuoja.</p>
+          <p>Prisidėk suma atitinkančia kavos puodelį, prie išlaidų padengimo!</p>
+          <a href="https://ko-fi.com/skrynai"><button class="btn">PAREMK</button></a>
+
+        </div>
+
+        <div class="join-card">
+          <img class="join-card-icon" src="./images/money.svg" alt="" />
+          <h3>Tapk partneriu!</h3>
+          <p>Partneriai tampa festivalio draugais ir bendrakūrėjais.</p>
+          <p>
+            Prisidėdami prie festivalio sėkmės finansiškai ar barteriu, būna matomi kino kūrėjų ir
+            megėjų
+          </p>
+        </div>
+
+        <div class="join-card">
+          <img class="join-card-icon" src="./images/hands.svg" alt="" />
           <h3>Savanoriauk!</h3>
           <p>
             Ieškome savanorių - tų, kurie myli turinį, nebijo veiksmo ir nori,
@@ -182,14 +222,6 @@
           <p>
             Jeigu nori kurti kartu, o veiksmas šiapus anapus ekranų nebaisu -
             prisijunk!
-          </p>
-        </div>
-        <div class="join-right">
-          <h3>Tapk remėju!</h3>
-          <p>Remėjai tampa festivalio draugais ir bendrakūrėjais.</p>
-          <p>
-            Prisidėdami prie festivalio sekmės, būna matomi kino kūrėjų ir
-            megėjų
           </p>
         </div>
       </div>
